# ChakraL-experiment

./: .gitignore  README.md
Compiler/: CMakeLists.txt  VSCodeProblemMatcher.txt
Compiler/ChakraLC/: CMakeLists.txt
Compiler/ChakraLC/src/: main.cpp
Compiler/libChakraL/: CMakeLists.txt
Compiler/libChakraL/autosrc/: chakralParserNodesHybridgen.cpp  chakralSemanticNodesHybridgen.cpp
Compiler/libChakraL/generators/: VSCodeProblemMatcher.txt  genUtil.py  generator.py  lexerGen.py  operatorProdGen.py  parserExprGen-recursive.py  parserExprGen.py  parserGen.py  parserGenCustom.py  parserGenLR.py  parserGenRecursive.py  parserGenShared.py  regexMacroGen.py  semanticMethodGen.py  syntaxDocGen.py  unicodeUtil.py
Compiler/libChakraL/include/: chakralLexer.h  chakralModel.h  chakralParser.h  chakralParserPrereqCustom.h  chakralParserPrereqLR.h  chakralParserPrereqRecursive.h  chakralParserPrereqShared.h  chakralSemanticsPrereq.h  chakralServer.h
Compiler/libChakraL/include/model/: chakralBlock.h  chakralContext.h  chakralIdentifier.h  chakralMapping.h  chakralModule.h  chakralRequirement.h  chakralScope.h  chakralSemTreeTypedefs.h  chakralSourceFile.h  chakralValue.h
Compiler/libChakraL/include/server/: TextLines.h
Compiler/libChakraL/include/util/: chakralSemTreeTypedefs.h
Compiler/libChakraL/src/: chakralLexer.cpp  chakralParser.cpp  chakralParserNodes.cpp  chakralParserPrereqCustom.cpp  chakralParserPrereqRecursive.cpp  chakralParserPrereqShared.cpp  parserNodes.cpp
Compiler/libChakraL/src/server/: TextLines.cpp
Compiler/libChakraL/syntaxdef/: lexer.txt  operatorTable.txt  parser.txt  semanticNodes.txt
Compiler/tests/: testProgram.ckrl
Docs/: compile.py
Docs/html/: assignment_and_definition.html  comparison_operators.html  context.html  context_operators.html  expressions.html  file_format.html  how_to_read_the_documentation.html  if_statement.html  introduction.html  language_features.html  language_goals.html  logical_operators.html  math_operators.html  module_expression.html  module_keyword.html  module_system.html  mutability.html  operator_as.html  operator_new.html  operators.html  ownership.html  style.css  syntax_style.css  trait_system.html  using_keyword.html  using_statement.html  value.html  value_qualifiers.html  with_statement.html
Docs/src/: _order.txt  pandoc-template-syntax.css  pandoc-used-syntax-blocks.md  style.css  template.html
Docs/src/0_Introduction/: File_format.md  How_to_read_the_documentation.md  Module_system.md  _order.txt
Docs/src/1_Basic_concepts/: Context.md  Value.md  _order.txt
Docs/src/2_Language_features/: _order.txt  module_keyword.md  using_keyword.md
Docs/src/2_Language_features/Expressions/: _Expressions.md  _order.txt  module_keyword.md
Docs/src/2_Language_features/Statements/: _order.txt  if_statement.md  using_keyword.md  using_statement.md
Docs/src/content/: _order.txt
Docs/src/content/0_Introduction/: File_format.md  How_to_read_the_documentation.md  Language_goals.md
Docs/src/content/1_Basic_concepts/: Context.md  Trait_system.md  Value.md
Docs/src/content/2_Language_features/: _order.txt
Docs/src/content/2_Language_features/Expressions/: _Expressions.md  _order.txt  module_expression.md
Docs/src/content/2_Language_features/Expressions/Operators/: Comparison_operators.md  Context_operators.md  Logical_operators.md  Math_operators.md  Operator_as.md  Operator_new.md  _Operators.md  _order.txt
Docs/src/content/2_Language_features/Statements/: Assignment_and_definition.md  _order.txt  using_statement.md  with_statement.md
Docs/src/content/2_Language_features/Value_qualifiers/: Mutability.md  Ownership.md  _Value_qualifiers.md  _order.txt
Docs/src/syntaxparsers/: chakral.xml
Examples/: shortTest.ckrl  testProgram.ckrl
Tools/: PrimeNumberMultiplicationLimits.py
